deploy/kustomize/overlays/prod/patch_logging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gaip
spec:
  template:
    metadata:
      labels:
        logging.qclaogui.com: "true"
