deploy/kustomize/overlays/prod/patch_mem_cpu_resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gaip
spec:
  template:
    spec:
      containers:
      - name: gaip
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 50m
            memory: 50Mi
