deploy/kustomize/overlays/prod/patch_strategy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gaip
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
