deploy/kustomize/overlays/prod/patch_monitoring.yaml
apiVersion: v1
kind: Service
metadata:
  name: gaip-svc
  labels:
    monitoring.qclaogui.com: "true"
spec:
  ports:
  - name: http-metrics
    port: 80
    protocol: TCP
    targetPort: 8080
