deploy/kustomize/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gaip
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-access-log: "false"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
spec:
  rules:
  - host: gaip.k8s.qclaogui.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gaip-svc-v0-0-1
            port:
              name: http-metrics
#              number: 80 # name和number不能同时指定
